# geosongpu-ci

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: discover-oncomment.yaml  discover-oncomment.yml  discover-ondemand.yml  discover_aq_nightly.yml  discover_clean_weekly.yaml  discover_heartbeat_nightly.yml  discover_hs_nightly.yml  discover_physics_standalone_nightly.yml  gh_pages_doc.yml
ci_experiments/: experiments.yaml
docs/: _config.yml
dsl_patterns/: Do__get_top_of_the_column.py  Do__while_in_gt_functions.py  README.md  WIP__hybrid_index_2dout.py  WIP_hybrid_index_2dout.py
experiments/: experiments.yaml
geos_build/: README.md
geos_build/serialize/: basics.sh  cmake.sh  make.sh  serialize.sh  xp_C24_make.sh  xp_C24_run.sh
geos_documentation/moist/: GF.drawio  GFDL_1M.drawio  NotesOnOriginalFortan.md  RAS.drawio  README.md  UW.drawio  UW_logic.drawio
geosongpu_ci/: dispatch.py
geosongpu_ci/actions/: git.py  pipeline.py  slurm.py
geosongpu_ci/pipeline/: __init__.py  actions.py  aquaplanet.py  ci_clean.py  ci_info.py  geos.py  gtfv3_config.py  heartbeat.py  held_suarez.py  physics_standalone.py  task.py  wip.py
geosongpu_ci/pipeline/templates/: __init__.py  gpu-wrapper-slurm-mps.sh.tpl
geosongpu_ci/tools/benchmark/: __init__.py  cli.py  geos_log_parser.py  raw_data.py  report.py
geosongpu_ci/tools/hws/: analysis.py  cli.py  client.py  constants.py  graph.py  server.py
geosongpu_ci/tools/plots/geos/: dash_grid_heatmaps.py
geosongpu_ci/tools/py_ftn_interface/: argument.py  base.py  bridge.py  cli.py  example_def_dycore.yaml  hook.py  validation.py
geosongpu_ci/tools/py_ftn_interface/templates/: cmake.jinja2  data_conversion.py  data_conversion.py.tpl  hook.py.jinja2  interface.c.jinja2  interface.f90.jinja2  interface.py.jinja2
geosongpu_ci/utils/: environment.py  registry.py  shell.py
ndsl_documentation/: README.md
ndsl_documentation/gt4py-dace-bridge/: README.md  code-blocks.drawio
plotting_tools/: arm_x86_diff.ipynb
results/mpi_gpu_rdma/: 24W7.json  plots.py
results/project/24W7/: SMT 2024-2026 - Backlog.tsv
smtn/: dispatch.py
smtn/actions/: git.py
smtn/pipeline/: __init__.py  aquaplanet.py  ci_clean.py  ci_info.py  geos.py  heartbeat.py  held_suarez.py  physics_standalone.py  task.py  wip.py
smtn/tools/: README.md
smtn/tools/benchmark/: cli.py  geos_log_parser.py  report.py
smtn/tools/hws/: analysis.py  cli.py  client.py  constants.py  graph.py  server.py
smtn/tools/plots/geos/: dash_grid_heatmaps.py  plot_via_plotly.py
smtn/tools/py_ftn_interface/: base.py  bridge.py  cli.py  hook.py  validation.py
smtn/utils/: ci_exception.py  environment.py  progress.py  shell.py
src/tcn/: dispatch.py
src/tcn/actions/: git.py  slurm.py
src/tcn/benchmark/: TODO.md  benchmark.py  cli.py  geos_log_parser.py  raw_data.py  report.py  string_trf.py
src/tcn/ci/: README.md  dispatch.py
src/tcn/ci/actions/: discover.py  git.py
src/tcn/ci/pipeline/: __init__.py  aquaplanet.py  ci_clean.py  ci_info.py  geos.py  heartbeat.py  held_suarez.py  physics_standalone.py  task.py  wip.py
src/tcn/ci/pipeline/templates/: __init__.py  gpu-mps-launcher.sh  gpu-wrapper-slurm-mps.sh.tpl  ompi-wrapper.sh
src/tcn/ci/utils/: environment.py  registry.py  shell.py
src/tcn/hws/: README.md  analysis.py  cli.py  client.py  constants.py  graph.py  server.py
src/tcn/pipeline/: __init__.py  aquaplanet.py  ci_clean.py  ci_info.py  geos.py  heartbeat.py  held_suarez.py  physics_standalone.py  task.py  wip.py
src/tcn/plots/: cli.py  colors.py
src/tcn/plots/geos/: dash_grid_heatmaps.py  plot_via_plotly.py
src/tcn/project/: summary.py
src/tcn/py_ftn_interface/: base.py  bridge.py  cli.py  hook.py  validation.py
src/tcn/py_ftn_interface/example/: bridge.f90  bridge.py  build_run.sh  clean.sh  data_desc.py  data_to_be_transited.h  main.f90  runtime_code.py
src/tcn/py_ftn_interface/templates/: cuda_profiler.py  data_conversion.py  interface.c.jinja2  interface.f90.jinja2
src/tcn/sw/: geos_version_checks.py
src/tcn/tools/benchmark/: cli.py  geos_log_parser.py  report.py
src/tcn/tools/hws/: README.md  analysis.py  cli.py  client.py  graph.py  server.py
src/tcn/tools/plots/: cli.py
src/tcn/tools/plots/geos/: dash_grid_heatmaps.py  plot_via_plotly.py
src/tcn/tools/py_ftn_interface/: argument.py  base.py  bridge.py  cli.py  hook.py  validation.py
src/tcn/tools/py_ftn_interface/templates/: cmake.jinja2  data_conversion.py  hook.py.jinja2  interface.py.jinja2
src/tcn/utils/: environment.py  shell.py
src/tcn/validation/: analysis.py  cli.py  geos_status.py
src/tcn/validation/serialbox/: serialbox_dat_to_netcdf.py
sw_stack/discover/sles15/: HISTORY.md  TODO.md
sw_stack/discover/sles15/modulefiles/DSLwork/: 1.0.0.lua
sw_stack/discover/sles15/modulefiles/SMTStack/: 1.0.0-no-ndsl.lua  1.0.0.lua  2024.03.00-no-ndsl.lua  2024.03.00-no-venv.lua  2024.03.00.lua  2024.04.00-no-venv.lua  (+3 more)
sw_stack/discover/sles15/v1.0.0/: basics.v1.0.0.sh  build.v1.0.0.sh  download.baselibs.sh  download.v1.0.0.sh  osu-bench.sh  tests.v1.0.0.sh
sw_stack/local/modulefiles/SMTStack/: 2024.08.LOCAL.lua  2024.08.LOCAL.sh
sw_stack/local/src/: basics.sh  build_baselibs.sh  build_boost.sh  build_gcc_oacc.sh  build_ndsl.sh  build_ompi.sh  build_osu.sh  build_python.sh  build_serialbox.sh  verify_baselibs.sh
test/: test_python_fortran_interface.py
test/hws/: test_gpu_psu.py
test/py_ftn_interface/: test_python_fortran_interface.py
test/py_ftn_interface/data/: fortran_program.f90  runtime_fortran.f90
test/py_ftn_interface/data/data/: CMakeLists.txt  test_python_fortran_interface.yaml
test/py_ftn_test/: fortran_program.f90  runtime_fortran.f90
tutorial/NDSL/: 01_gt4py_basics.ipynb  02_NDSL_basics.ipynb  03_orchestration_basics.ipynb
tutorial/orchestration/: 01_orchestration_tutorial.ipynb  basic_orchestration.py
tutorial/serialbox/: 01.ipynb
website/: _config.yml
website/_posts/: 2024-03-25-welcome-to-jekyll.markdown
(+25 files in other folders)
