[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tcn"
version = "2023.0.0"
authors = [
    { name = "NASA Advanced Software and Technology Group", email = "florian.g.deconinck@nasa.gov" },
]
description = "Software Modernization Team code sandbox (a.k.a TCN: The Code Nebulae)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "pyyaml",
    "numpy",
    "pdoc",
    "pynvml",
    "psutil",
    "clang-format",
    "jinja2",
    "fprettify",
    "black",
    "dash",
    "dash_bootstrap_components",
    "dask",
    "plotly",
    "kaleido",
    "pre-commit",
    "xarray",
    "netcdf4==1.6.3",
    "pandas",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.tpl"]

[project.scripts]
tcn-ci = "tcn.ci.dispatch:cli"
tcn-hws = "tcn.hws.cli:cli"
tcn-fpy = "tcn.py_ftn_interface.cli:cli"
tcn-plots = "tcn.plots.cli:cli"
